--- a/src/main/resources/templates/account/order/orderList.html
+++ b/src/main/resources/templates/account/order/orderList.html
@@ -218,7 +218,7 @@
                 $("#courierNumber").val(rs.courierNumber);
             },
             error : function (data) {
-                layer.alert(data.responseText, {icon: 0});
+                layer.alert(data.massage, {icon: 0});
             }
         });
     }
@@ -257,7 +257,7 @@
                 $("#orderEditPhone").val(rs.userPhone);
             },
             error : function (data) {
-                layer.alert(data.responseText, {icon: 0});
+                layer.alert(data.massage, {icon: 0});
             }
         });
     }
@@ -282,7 +282,7 @@
                 }
             },
             error : function (data) {
-                layer.alert(data.responseText, {icon: 0});
+                layer.alert(data.massage, {icon: 0});
             }
         });
     }
@@ -300,7 +300,7 @@
                 }
             },
             error: function (data) {
-                layer.msg(data.responseText, {icon: 0});
+                layer.msg(data.massage, {icon: 0});
             }
         });
     }
