--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -66,9 +66,8 @@
 
 
 
-            <li><a href="#" class="dropdown-toggle"><i class="icon-group"></i><span class="menu-text"> 管理员管理 </span><b class="arrow icon-angle-down"></b></a>
+            <li><a shiro:Authenticated="supper_admain" href="#" class="dropdown-toggle"><i class="icon-group"></i><span class="menu-text"> 管理员管理 </span><b class="arrow icon-angle-down"></b></a>
                 <ul class="submenu">
-
                     <li class="home"><a href="javascript:void(0)" name="/account/roles" title="角色列表"  class="iframeurl"><i class="icon-double-angle-right"></i>权限管理</a></li>
                     <li class="home"><a href="javascript:void(0)" name="/account/Admins" title="管理员列表" class="iframeurl"><i class="icon-double-angle-right"></i>管理员列表</a></li>
                 </ul>
